back button z-index corrected

--- a/src/app/map-view/map-view.component.scss
+++ b/src/app/map-view/map-view.component.scss
@@ -17,7 +17,7 @@
   font-weight: 500;
   img {
     position: relative;
-    z-index: 100;
+    z-index: 1;
     width: 20px;
     margin-bottom: 5px;
     vertical-align: middle;
